# river

./: .clang-format  CMakeLists.txt  README.md  makefile
src/: builder.cpp  builder.hpp  channel.cpp  channel.hpp  link.cpp  link.hpp  lock.hpp  river.cpp  river.hpp  rivulet.cpp  rivulet.hpp
test/: test_channels.cpp
